--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h2>Test Application</h2>
 <p><%= @message %></p>
-<p>This test app is to prove out that Passenger is functioning.</p>
+<p>This test app is to prove out that Thin is functioning.</p>
